[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Actors/player.gd" type="Script" id=1]
[ext_resource path="res://assets/lok.png" type="Texture" id=2]
[ext_resource path="res://src/Abilities/Dash.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Shaders/blink.gdshader" type="Shader" id=4]
[ext_resource path="res://src/Abilities/Reflect.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Sounds/player_death.wav" type="AudioStream" id=6]

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 4 )
shader_param/flash_color = Color( 0.564706, 0.564706, 0.564706, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 15.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.734, 10 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blade/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("blade/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.576644 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.199843, 0.397648 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=11]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "inair"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 14, 11 ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=12]
resource_name = "reflect"
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 23, 24 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "wall_slide"
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 12
script = ExtResource( 1 )
MAX_SPEED = 150
ACCELERATION = 1000
GRAVITY_FORCE = 1500
COYOTE_TIMER = 0.048
JUMP_BUFFER = 0.073
WALL_JUMP = Vector2( 350, 450 )

[node name="player" type="Sprite" parent="."]
material = SubResource( 10 )
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
hframes = 8
vframes = 4
frame = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -61 )
current = true
zoom = Vector2( 0.7, 0.7 )
limit_left = 0
limit_top = 22
limit_right = 2205
limit_bottom = 340
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 2.0
drag_margin_left = 0.6
drag_margin_top = 0.4
drag_margin_right = 0.4
editor_draw_drag_margin = true

[node name="blade" type="Area2D" parent="."]
position = Vector2( -5, 0 )
scale = Vector2( 1.16874, 1.0996 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="blade"]
position = Vector2( 18.3571, -15.4602 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
reset_on_save = false
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 5 )
anims/die = SubResource( 11 )
anims/idle = SubResource( 2 )
anims/inair = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/reflect = SubResource( 12 )
anims/run = SubResource( 4 )
anims/wall_slide = SubResource( 9 )

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2( -11, -17 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 8

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2( 11, -16 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 8

[node name="dash" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, -16 )

[node name="Reflect" parent="." instance=ExtResource( 5 )]
position = Vector2( 11, 0 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="ready" from="Camera2D" to="." method="_on_Camera2D_ready"]
[connection signal="body_entered" from="blade" to="." method="_on_blade_body_entered"]
